fix(bug): horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* 
 h1 {
     element selector
@@ -15,23 +14,20 @@ h1 {
     background-repeat: no-repeat;
     background-position: center;
     /* left top*/
-    width: 100vw;
     background-position-y: 20%;
     background-origin: padding-box;
     /*background-image: linear-gradient(to bottom,red, blue); */
     /* background-image: radial-gradient(circle at 20% 50%, red,blue); */
-   
     font-size: 20px;
     color: whitesmoke;
     height: 53vh;
-  
     position: relative;
 }
 
 .product-h h1 {
     position: absolute;
     top: 70%;
-    left:3%;
+    left: 3%;
     font-size: 1.6rem;
 }
 
@@ -39,6 +35,7 @@ h1 {
     /*class selector*/
     color: green;
 }
+
 @media (min-width: 40rem) and (min-height: 40rem) {
     .product-h {
         height: 40vh;
@@ -48,7 +45,10 @@ h1 {
         font-size: 3rem;
     }
 }
+
+
 /************************  NAV  ********************************************/
+
 
 /*********************************************************/
 
@@ -68,7 +68,6 @@ h1 {
 .plan--highlighted {
     background: green;
     color: ivory;
-    
 }
 
 .plan__annotation {
@@ -89,7 +88,8 @@ h1 {
     margin: 0.5rem 0;
 }
 
-@media (min-width: 40rem) { /*desktop version*/
+@media (min-width: 40rem) {
+    /*desktop version*/
     .plan__list {
         width: 100%;
         display: flex;
@@ -106,7 +106,7 @@ h1 {
         height: 28rem;
     }
     .plan--highlighted {
-        box-shadow: 2px 2px 2px 2px rgb(0,0,0,0.5);
+        box-shadow: 2px 2px 2px 2px rgb(0, 0, 0, 0.5);
         height: 30rem;
         z-index: 50;
     }
@@ -122,7 +122,6 @@ h1 {
 
 .plan--highlighted .plan__price {
     color: rgb(6, 36, 6);
-    
 }
 
 .plan--highlighted .plan__tiltle {
@@ -147,6 +146,7 @@ h1 {
     text-align: center;
 }
 
+
 /* .key-feature {
      display: inline-block; 
      width: 30%; 
@@ -164,7 +164,6 @@ h1 {
     .key-feature {
         width: 30%;
         max-width: 25rem;
-        
     }
     .key-feature__list {
         display: flex;
@@ -187,7 +186,7 @@ h1 {
     /* display: none; */
     z-index: 200;
     opacity: 0;
-    transform:translateY(-3rem);
+    transform: translateY(-3rem);
     transition: opacity 200ms ease-out, transform 500ms ease-out;
     top: 20%;
     left: 30%;
@@ -217,7 +216,8 @@ h1 {
     cursor: pointer;
 }
 
-.modal__action:hover, .modal__action:active {
+.modal__action:hover,
+.modal__action:active {
     background: #2ddf5c;
     border-color: #2ddf5c;
 }
@@ -227,7 +227,8 @@ h1 {
     border-color: red;
 }
 
-.modal__action--negative:hover, .modal__action--negative:active {
+.modal__action--negative:hover,
+.modal__action--negative:active {
     background: #ff5454;
     border-color: #ff5454;
 }
